# cli-mcp

./: README.md  pyproject.toml
src/cli/: cliexplorer.py  server.py
