[project]
name = "cli"
version = "0.1.0"
description = "cli bridge"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
 "mcp>=1.0.0",
]
[[project.authors]]
name = "Marc Laugharn"
email = "mlaugharn@gmail.com"

[build-system]
requires = [ "hatchling",]
build-backend = "hatchling.build"

[project.scripts]
cli = "cli:main"
